# pyserve

./: README.md  pyproject.toml  pyserve.py  test_pyserve.py
examples/: greet.py  hello_world.py  pyserve.py
